Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1674

Simple HttpServer crashes when reading directories in Windows 2012 Server

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.7.0
    • None

    Description

      Simple HttpServer crashes when reading directories in Windows 2012 Server.
      At the start, Simple HttpServer search for WebServices directories, and it is crashing in Windows 2012 Server.

      Attachments

        1. FixCrashHttpServer_01.patch
          0.7 kB
          Rafael Bronzeri
        2. FixCrashHttpServer_02.patch
          4 kB
          Rafael Bronzeri
        3. FixCrashHttpServer_03.patch
          0.5 kB
          Rafael Bronzeri
        4. FixCrashHttpServer_04.patch
          0.4 kB
          Rafael Bronzeri

        Activity

          People

            Unassigned Unassigned
            rafael.bronzeri Rafael Bronzeri
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: