Fixed Bug: AXIS2C-1674. Simple HttpServer crashes when reading directories in Windows 2012 Server